remove contact us from menu, fix responsive popup z-index issue

--- a/app/[locale]/components/responsiblePopup/style.scss
+++ b/app/[locale]/components/responsiblePopup/style.scss
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 99;
+  z-index: 99999;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
 
